--- a/ios-developer.html
+++ b/ios-developer.html
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/endurance/jobs/1857816?gh_src=3e45c3701'>Job Application for Senior iOS Developer at Endurance International Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/endurance/jobs/1857816?gh_src=3e45c3701'>Job Application for Senior iOS Developer at Endurance International Group</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://20bn.applytojob.com/apply/l1cv6r1PdH/IOS-Developer'>iOS Developer - Twenty Billion Neurons GmbH - Career Page</a></h5> 
+<h5><a href='http://20bn.applytojob.com/apply/l1cv6r1PdH/IOS-Developer'>iOS Developer - Twenty Billion Neurons GmbH - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -144,7 +144,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='http://holycodedoo.applytojob.com/apply/kN74wiiMCD/IOS-Developer-Oviva-Team'>iOS Developer - Oviva Team - Holycode - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://holycodedoo.applytojob.com/apply/kN74wiiMCD/IOS-Developer-Oviva-Team'>iOS Developer - Oviva Team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -156,7 +156,7 @@
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/PiQNvBeOT7/IOS-Developer'>iOS Developer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/PiQNvBeOT7/IOS-Developer'>iOS Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -269,7 +269,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://bdswiss.workable.com/j/7D4A039875'>BDSwiss - Jobs: iOS Mobile Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bdswiss.workable.com/j/7D4A039875'>BDSwiss - Jobs: iOS Mobile Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -281,7 +281,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -305,7 +305,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sanerjobs.com/job/junior-ios-developer-proteams-information-technologies/75'>Junior iOS Developer at Proteams Information Technologies - SanerJobs</a></h5> 
+<h5><a href='https://sanerjobs.com/job/junior-ios-developer-proteams-information-technologies/75'>Junior iOS Developer at Proteams Information Technologies - SanerJobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -333,7 +333,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Shanghai Shanghai</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cornershopapp/20020753-58b8-4910-9ecf-90a3e2264df2'>Cornershop - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cornershopapp/20020753-58b8-4910-9ecf-90a3e2264df2'>Cornershop - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -381,7 +381,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://santoranakama.applytojob.com/apply/Usr4PWiR9i/Lead-Senior-IOS-Developer-Geddit-LIVE'>Lead Senior iOS Developer | Geddit LIVE - Santora Nakama - Career Page</a></h5> 
+<h5><a href='http://santoranakama.applytojob.com/apply/Usr4PWiR9i/Lead-Senior-IOS-Developer-Geddit-LIVE'>Lead Senior iOS Developer | Geddit LIVE - Santora Nakama - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -441,7 +441,7 @@ designed apps (in terms of technical design) and why. This is open ended and?...
 Software Development. Full-time. Apply for this job. TradeRev is an online 
 automotive?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tulip/71c3f977-cc99-417f-a927-8e710a94bb37'>Tulip Retail - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/tulip/71c3f977-cc99-417f-a927-8e710a94bb37'>Tulip Retail - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
